상품, 스토리 검색 기능 구현 (#101)